<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.mobicents.tools</groupId>
    <artifactId>sip-balancer</artifactId>
    <version>10.1.219</version>
  </parent>
  
  <artifactId>heartbeat-rmi</artifactId>
  <name>Restcomm Converged Load Balancer Heartbeat RMI</name>
  <description>Restcomm Converged Load Balancer Heartbeat based on RMI</description>
  
  <dependencies>
  	<dependency>
    	<groupId>org.mobicents.tools</groupId>
    	<artifactId>heartbeat-api</artifactId>
    	<version>10.1.219</version>
    </dependency>
  	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
	</dependency>
	<dependency>
    	<groupId>io.netty</groupId>
    	<artifactId>netty</artifactId>
    	<version>3.6.2.Final</version>
	</dependency>
   </dependencies>
  <build>
		<plugins>
		<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArguments>
						<g />
					</compilerArguments>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
  		<!-- <plugin>
  			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>2.12.4</version>
			<configuration>
				<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
			</configuration>
  			</plugin> -->
		</plugins>
  </build>
</project>